# barcelona-extropic-font

./: .gitignore  AGENTS.md  Cargo.toml  README.md  barcelona-extropic.css  barcelona-extropic.fig  deploy.sh  font_route.js  gateway.patch  lib.rs  llms.txt  smoke_test.sh  wrangler.toml
.claude-plugin/: marketplace.json
.github/: copilot-instructions.md
